# chat_protector

./: Dockerfile  README.md  pyproject.toml  setup.py
chat_protector/: .env.example  __main__.py  config.py  services_manager.py  templates.py
chat_protector/analysis/: __init__.py  analysis.py
chat_protector/handlers/: __init__.py  help.py  scan.py
chat_protector/handlers/services/: file_downloader.py  message_senders.py  threat_processor.py
chat_protector/services/: analysis.py  errors.py  file_downloader.py  initializer.py  message_sender.py  url_analysis.py
chat_protector/templates/: help.j2
